# task

./: CMakeLists.txt  README.md  commands.cpp  commands.h  game.cpp  game.h  main.cpp  map.cpp  map.h  mapa.txt  production.cpp  production.h  status.cpp  status.h
